tests/baselines/reference/newlinesOnLongMessagesWithPretty.errors.txt
[96mnewlinesOnLongMessagesWithPretty.ts[0m:[93m6[0m:[93m1[0m - [91merror[0m[90m TS2855: [0mType:\nstring\n\nis not assignable to type:\n{ b: { c: { e: { f: number; }; }; }; }

[7m6[0m a = b
[7m [0m [91m~[0m
[96mnewlinesOnLongMessagesWithPretty.ts[0m:[93m8[0m:[93m1[0m - [91merror[0m[90m TS2855: [0mType:\n{ b: { c: { e: { f: number; }; }; }; }\n\nis not assignable to type:\nstring

[7m8[0m b = a
[7m [0m [91m~[0m
[96mnewlinesOnLongMessagesWithPretty.ts[0m:[93m11[0m:[93m22[0m - [91merror[0m[90m TS2322: [0mType '{}' is not assignable to type 'number'.

[7m11[0m a = { b: { c: { e: { f: {} } } } }
[7m  [0m [91m                     ~[0m

  [96mnewlinesOnLongMessagesWithPretty.ts[0m:[93m2[0m:[93m26[0m
    [7m2[0m let a = { b: { c: { e: { f: 123 } } } };
    [7m [0m [96m                         ~~~~~~[0m
    The expected type comes from property 'f' which is declared here on type '{ f: number; }'
[96mnewlinesOnLongMessagesWithPretty.ts[0m:[93m14[0m:[93m1[0m - [91merror[0m[90m TS2322: [0mType 'number' is not assignable to type 'string'.

[7m14[0m b = 123123
[7m  [0m [91m~[0m


==== newlinesOnLongMessagesWithPretty.ts (4 errors) ====
    // a is 31 chars long
    let a = { b: { c: { e: { f: 123 } } } };
    let b = "hello"
    
    // 'a' here is long enough to count in the source as a newline
    a = b
    ~
!!! error TS2855: Type:\nstring\n\nis not assignable to type:\n{ b: { c: { e: { f: number; }; }; }; }
    // 'a' here is long enough to count in the target as a newline
    b = a
    ~
!!! error TS2855: Type:\n{ b: { c: { e: { f: number; }; }; }; }\n\nis not assignable to type:\nstring
    
    // This won't trigger it because we only show the relation instead
    a = { b: { c: { e: { f: {} } } } }
                         ~
!!! error TS2322: Type '{}' is not assignable to type 'number'.
!!! related TS6500 newlinesOnLongMessagesWithPretty.ts:2:26: The expected type comes from property 'f' which is declared here on type '{ f: number; }'
    
    // No newlines here because they're both short
    b = 123123
    ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
    
Found 4 errors in the same file, starting at: newlinesOnLongMessagesWithPretty.ts[90m:6[0m

